--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ voyage/voyage/__pycache__/urls.cpython-38.pyc
 voyage/voyage/__pycache__/wsgi.cpython-38.pyc
 voyage/user/migrations/__pycache__/__init__.cpython-38.pyc
 voyage/voyage/__pycache__/wsgi.cpython-38.pyc
+voyage/voyage/__pycache__/settings.cpython-38.pyc
+voyage/voyage/__pycache__/urls.cpython-38.pyc
