--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ voyage/user/migrations/__pycache__/__init__.cpython-38.pyc
 voyage/voyage/__pycache__/wsgi.cpython-38.pyc
 voyage/voyage/__pycache__/settings.cpython-38.pyc
 voyage/voyage/__pycache__/urls.cpython-38.pyc
+voyage/authentication/__pycache__/views.cpython-38.pyc
+voyage/voyage/__pycache__/urls.cpython-38.pyc
