added route table and increased wallet to 10000

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ voyage/voyage/__pycache__/urls.cpython-38.pyc
 voyage/authentication/__pycache__/views.cpython-38.pyc
 voyage/authentication/__pycache__/admin.cpython-38.pyc
 voyage/authentication/__pycache__/models.cpython-38.pyc
+voyage/authentication/__pycache__/views.cpython-38.pyc
+voyage/voyage/__pycache__/urls.cpython-38.pyc
