--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ voyage/voyage/__pycache__/urls.cpython-38.pyc
 voyage/voyage/__pycache__/urls.cpython-38.pyc
 voyage/voyage/__pycache__/settings.cpython-38.pyc
 voyage/authentication/__pycache__/views.cpython-38.pyc
+voyage/authentication/__pycache__/views.cpython-38.pyc
+voyage/voyage/__pycache__/urls.cpython-38.pyc
